--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "un simple bot pronote",
   "main": "index.js",
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "pronote-api": "^2.2.0"
+    "discord.js": "^12.4.1",
+    "pronote-api": "^2.2.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
