--- a/config.json
+++ b/config.json
@@ -1,10 +1,5 @@
 {
 	"prefix": ".",
-	"token": "NzcwNDU1OTExMTkyODU0NTY4.X5d0-w.sGcaO9mzP1uOT3WrjjRRr7UQnC8",
-    "arch_rank": 770459311422832661,
-    "debian_rank": 770459363135455263,
-    "android_rank": 770459469712588800,
-    "rhel_rank": 770459535768420375,
-    "bsd_rank": 770459653259526195
+	"token": "NzcwNDU1OTExMTkyODU0NTY4.X5d0-w.sGcaO9mzP1uOT3WrjjRRr7UQnC8"
 }
 
